syntax = "proto3";

option csharp_namespace = "LClaproth.MyFinancialTracker.Transactions.Bank";

package Transaction;

service Handler {
  rpc Transactions (Empty) returns (Response);
  rpc AddTransactions (TransactionParameters) returns (Response);
}

message Empty {
    
}

message Response {
    string Message = 1;
    optional Data Data = 2;
    optional MetaData MetaData = 3;
    optional Error error = 4;
}

message Data {
    repeated Transaction TransactionList = 1;
    optional string Source = 2;
}

message MetaData {
    int32 Count = 1;
}

message Error {
    string Message = 1;
    string StackTrace = 2;
}

message TransactionParameters {
    repeated Transaction Transactions = 1;
}

message Transaction {
    int64 Id = 1;
    string Source = 2;
    int64 TimeStamp = 3;
    string Description = 4;
    string hash = 5;
    string Statement = 6;
    int64 UserId = 7;
    string ImportId = 8;
}
